# sol-examples

./: .gitignore
anchor-programs/clients/counter-client/: package.json  vite.config.ts
anchor-programs/clients/movie-review-client/: package.json
anchor-programs/counter-program/: Anchor.toml
anchor-programs/counter-program/tests/: counter-program.ts
anchor-programs/movie-review-program/: Anchor.toml
anchor-programs/movie-review-program/tests/: movie-review-program.ts
native-programs/calculator-program/: Cargo.toml
native-programs/counter-program/: Cargo.toml
native-programs/hello_world-program/: Cargo.toml
native-programs/movie-review-program/: Cargo.toml
native-programs/movie-review-program/client/: vite.config.ts
native-programs/movie-review-program/client/src/: App.tsx
native-programs/movie-review-program/client/src/components/: AddMovieReview.tsx  MovieList.tsx
native-programs/movie-review-program/client/src/lib/: Movie.ts
native-programs/movie-review-program/src/: instruction.rs  lib.rs  state.rs
native-programs/student-intro-program/: Cargo.toml
solana-client/: package.json
solana-client/airdrop/: index.ts
solana-client/counter-client/: index.ts
solana-client/movie-review-app/: package.json
solana-client/nft-program/: index.ts
solana-client/ping-program/: index.ts
solana-client/show-balance/: index.ts
solana-client/token-program/: create-token-metadata.ts  create-token-mint.ts  index.ts
solana-client/transfer-sol/: index.ts
solana-client/wallets/: package.json
voting-dapp/: package-lock.json
(+41 files in other folders)
